# fast_config

./: .gitignore  CONTRIBUTORS.md  CONVERSION_TUTORIAL.md  Cargo.toml  README.md  TODO.md  test.cmd
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: advanced_test.yml  main_test.yml  rust.yml
examples/: advanced.rs  simple.rs
fast_config/: Cargo.toml
fast_config/src/: lib.rs  tests.rs
fast_config/src/tests/: associated.rs  generics.rs  mod.rs  nested.rs  simple.rs
fast_config_derive/: Cargo.toml
fast_config_derive/src/: lib.rs
scripts/: test.cmd  test.sh
src/: error.rs  error_messages.rs  extensions.rs  format_dependant.rs  lib.rs  tests.rs  utils.rs
