[package]
name = "fast_config"
version = "1.0.0"
edition = "2021"
authors = ["FlooferLand"]
description = "A small and simple multi-format crate to handle config files"
repository = "https://github.com/FlooferLand/fast_config"
keywords = ["settings", "config", "configuration", "easy", "json5"]
categories = ["config"]
license-file = "./LICENSE"
documentation = "https://docs.rs/fast_config"

[dev-dependencies]
env_logger = "0.10.0"

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
log = "0.4.17"
thiserror = "1.0.38"

# Optional
json5 = { version = "0.4.1",  optional = true }
toml  = { version = "0.5.10", optional = true }
serde_yaml = { version = "0.9.16",  optional = true }
serde_json = { version = "1.0.91", optional = true }

[features]
default = []
json5 = ["dep:json5", "dep:serde_json"]
yaml  = ["dep:serde_yaml"]
