[package]
name = "fast_config"
version = "2.0.0"
edition = "2024"
authors = ["FlooferLand", "Younes Torshizi <vaytea59@gmail.com>"]
description = "A small and simple multi-format crate to handle config files"
keywords = ["settings", "config", "configuration", "simple", "json5"]
categories = ["config"]
exclude = ["src/tests.rs", "test.cmd"]

# GitHub stuff
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/fast_config"
repository = "https://github.com/FlooferLand/fast_config"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = false }
thiserror = "2.0"

# Optional
fast_config_derive = { path = "../fast_config_derive", optional = true }
json5 = { version = "0.4", optional = true }
toml = { version = "0.9", optional = true }
serde_yml = { version = "0.0.11", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["all"]
all = ["json", "json5", "toml", "yaml", "derive"]

derive = ["dep:fast_config_derive"]
json = ["dep:serde_json"]
json5 = ["dep:json5", "dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]
