[package]
name = "fast_config_derive"
version = "0.1.0"
edition = "2024"
authors = ["Younes Torshizi <vaytea59@gmail.com>", "FlooferLand"]
description = "Derive macro for fast_config"
keywords = ["settings", "config", "configuration", "macro", "derive"]
categories = ["config"]
license = "MIT"
documentation = "https://docs.rs/fast_config_derive"
repository = "https://github.com/FlooferLand/fast_config"

[lib]
name = "fast_config_derive"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1", features = ["proc-macro"] }
quote = { version = "1", features = ["proc-macro"] }
syn = { version = "2" }
